--- a/package.json
+++ b/package.json
@@ -9,13 +9,41 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "expo": "~47.0.12",
+    "@react-native-community/async-storage": "^1.12.0",
+    "@react-native-community/google-signin": "^4.0.3",
+    "@react-native-community/masked-view": "^0.1.10",
+    "@react-native-firebase/app": "^16.6.0",
+    "@react-native-firebase/auth": "^16.6.0",
+    "@react-native-firebase/firestore": "^16.6.0",
+    "@react-native-firebase/storage": "^16.6.0",
+    "@react-navigation/bottom-tabs": "^6.5.3",
+    "@react-navigation/native": "^6.1.2",
+    "@react-navigation/stack": "^6.3.11",
+    "expo": "~47.0.13",
+    "expo-cli": "^6.2.1",
     "expo-status-bar": "~1.4.2",
-    "react": "18.1.0",
-    "react-native": "0.70.5"
+    "moment": "^2.29.4",
+    "native-base": "^3.4.25",
+    "react": "18.2.0",
+    "react-native": "0.71.1",
+    "react-native-action-button": "^2.8.5",
+    "react-native-fbsdk": "^3.0.0",
+    "react-native-gesture-handler": "^2.9.0",
+    "react-native-gifted-chat": "^1.1.1",
+    "react-native-image-crop-picker": "^0.39.0",
+    "react-native-onboarding-swiper": "^1.2.0",
+    "react-native-paper": "^5.1.4",
+    "react-native-reanimated": "^2.14.4",
+    "react-native-safe-area-context": "^4.5.0",
+    "react-native-screens": "^3.19.0",
+    "react-native-skeleton-placeholder": "^5.2.4",
+    "react-native-svg": "^13.7.0",
+    "react-native-vector-icons": "^9.2.0",
+    "reanimated-bottom-sheet": "^1.0.0-alpha.22",
+    "styled-components": "^5.3.6"
   },
   "devDependencies": {
-    "@babel/core": "^7.12.9"
+    "@babel/core": "^7.20.12"
   },
   "private": true
 }
