--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "@react-native-community/async-storage": "^1.12.0",
+    "@react-native-async-storage/async-storage": "^1.17.11",
     "@react-native-community/google-signin": "^4.0.3",
     "@react-native-community/masked-view": "^0.1.10",
     "@react-native-firebase/app": "^16.6.0",
@@ -20,24 +20,29 @@
     "@react-navigation/native": "^6.1.2",
     "@react-navigation/stack": "^6.3.11",
     "expo": "~47.0.13",
-    "expo-cli": "^6.2.1",
+    "expo-cli": "^6.3.0",
     "expo-status-bar": "~1.4.2",
     "moment": "^2.29.4",
     "native-base": "^3.4.25",
-    "react": "18.2.0",
-    "react-native": "0.71.1",
+    "react": "18.1.0",
+    "react-native": "0.70.5",
     "react-native-action-button": "^2.8.5",
     "react-native-fbsdk": "^3.0.0",
-    "react-native-gesture-handler": "^2.9.0",
+    "react-native-gesture-handler": "~2.8.0",
     "react-native-gifted-chat": "^1.1.1",
+    "react-native-google-places-autocomplete": "^2.5.1",
     "react-native-image-crop-picker": "^0.39.0",
+    "react-native-maps": "^1.3.2",
+    "react-native-maps-directions": "^1.9.0",
     "react-native-onboarding-swiper": "^1.2.0",
+    "react-native-pager-view": "6.0.1",
     "react-native-paper": "^5.1.4",
-    "react-native-reanimated": "^2.14.4",
-    "react-native-safe-area-context": "^4.5.0",
-    "react-native-screens": "^3.19.0",
+    "react-native-reanimated": "~2.12.0",
+    "react-native-safe-area-context": "4.4.1",
+    "react-native-screens": "~3.18.0",
     "react-native-skeleton-placeholder": "^5.2.4",
-    "react-native-svg": "^13.7.0",
+    "react-native-svg": "13.4.0",
+    "react-native-tab-view": "^3.3.4",
     "react-native-vector-icons": "^9.2.0",
     "reanimated-bottom-sheet": "^1.0.0-alpha.22",
     "styled-components": "^5.3.6"
