--- a/package.json
+++ b/package.json
@@ -45,7 +45,8 @@
     "react-native-tab-view": "^3.3.4",
     "react-native-vector-icons": "^9.2.0",
     "reanimated-bottom-sheet": "^1.0.0-alpha.22",
-    "styled-components": "^5.3.6"
+    "styled-components": "^5.3.6",
+    "expo-location": "~15.0.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.12"
