--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@react-navigation/stack": "^6.3.11",
     "expo": "~47.0.13",
     "expo-cli": "^6.3.0",
+    "expo-location": "~15.0.1",
     "expo-status-bar": "~1.4.2",
     "moment": "^2.29.4",
     "native-base": "^3.4.25",
@@ -28,6 +29,7 @@
     "react-native": "0.70.5",
     "react-native-action-button": "^2.8.5",
     "react-native-fbsdk": "^3.0.0",
+    "react-native-geolocation-service": "^5.3.1",
     "react-native-gesture-handler": "~2.8.0",
     "react-native-gifted-chat": "^1.1.1",
     "react-native-google-places-autocomplete": "^2.5.1",
@@ -37,6 +39,7 @@
     "react-native-onboarding-swiper": "^1.2.0",
     "react-native-pager-view": "6.0.1",
     "react-native-paper": "^5.1.4",
+    "react-native-ratings": "^8.1.0",
     "react-native-reanimated": "~2.12.0",
     "react-native-safe-area-context": "4.4.1",
     "react-native-screens": "~3.18.0",
@@ -44,9 +47,9 @@
     "react-native-svg": "13.4.0",
     "react-native-tab-view": "^3.3.4",
     "react-native-vector-icons": "^9.2.0",
+    "react-native-web": "^0.18.12",
     "reanimated-bottom-sheet": "^1.0.0-alpha.22",
-    "styled-components": "^5.3.6",
-    "expo-location": "~15.0.1"
+    "styled-components": "^5.3.6"
   },
   "devDependencies": {
     "@babel/core": "^7.20.12"
